--- a/hotel-reservation-system-frontend/src/index.css
+++ b/hotel-reservation-system-frontend/src/index.css
@@ -10,7 +10,7 @@
   /*color-scheme: light dark;
   color: rgba(37, 37, 37, 0.87);
   background-color: #f3f3f3;*/
-
+  background-color: whitesmoke;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
