implementacion login en react - falta completar, auth context y mejorar proteccion de rutas

--- a/hotel-reservation-system-frontend/src/App.css
+++ b/hotel-reservation-system-frontend/src/App.css
@@ -1,4 +1,4 @@
-
+/*
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -25,5 +25,5 @@
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
+}*/
 
